#114 Supporting policy description, notes, and managed policies in the API.
